# audiotab

./: .gitignore  Cargo.toml  README.md  project.md
audiotab-macros/: Cargo.toml
audiotab-macros/src/: lib.rs  (+1 more)
docs/: ARCHITECTURE_FRAMEWORK.md  architecture.md  phase1-completion.md  phase2-manual-test-checklist.md  phase3-completion.md  phase3-manual-test-results.md  project-completion-summary.md
src/: lib.rs  main.rs
src-frontend/: index.html  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/docs/: error-handling.md
src-tauri/src/: lib.rs  state.rs
src-tauri/src/commands/: hardware.rs  kernel.rs  mod.rs  nodes.rs  pipeline.rs  visualization.rs
src-tauri/src/graph/: mod.rs  translator.rs
src-tauri/src/hardware_manager/: commands.rs  config.rs  mod.rs  state.rs
src-tauri/src/kernel_manager/: mod.rs
src-tauri/src/nodes/: metadata.rs
src-tauri/tests/: graph_execution.rs  integration_device_registration.rs
tests/: buffers_pool_tests.rs  core_dataframe_tests.rs  core_node_tests.rs  engine_async_pipeline_tests.rs  engine_backpressure_tests.rs  engine_observability_integration_tests.rs  engine_pipeline_tests.rs  engine_pool_tests.rs  hal_audio_driver_tests.rs  hal_audio_streaming_tests.rs  hal_audio_test.rs  hal_channel_mapper_tests.rs  hal_registry_test.rs  hal_registry_tests.rs  hal_trigger_test.rs  kernel_runtime_tests.rs  node_registry_test.rs  nodes_audio_input_tests.rs  nodes_audio_output_tests.rs  nodes_audio_source_tests.rs  nodes_gain_tests.rs  nodes_print_tests.rs  nodes_sine_tests.rs  observability_collector_tests.rs  observability_metrics_tests.rs  observability_monitor_tests.rs  phase1_integration_test.rs  pipeline_priority_test.rs  pipeline_state_test.rs  resilience_node_tests.rs  resilience_policy_tests.rs  scheduler_test.rs
wasm-module/: Cargo.toml
(+105 files in other folders)
