[workspace]
members = [".", "src-tauri"]
resolver = "2"

[package]
name = "audiotab"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
