[workspace]
members = [".", "src-tauri", "audiotab-macros", "wasm-module"]
resolver = "2"

[package]
name = "audiotab"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1"
inventory = "0.3"
audiotab-macros = { path = "./audiotab-macros" }
ctor = "0.6.1"
memmap2 = "0.9"
crossbeam-channel = "0.5"
cpal = "0.15"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
tempfile = "3.8"
