[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.13", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
audiotab = { path = "../" }
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
tauri-plugin-log = "2.0.0-rc"
inventory = "0.3"
anyhow = "1.0"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.13"
